--- a/scss/block/_block.scss
+++ b/scss/block/_block.scss
@@ -3,3 +3,8 @@
 @import "hero-section";
 @import "footer";
 @import "service";
+@import "deliver";
+@import "ready";
+@import "about";
+@import "director";
+@import "client";
