--- a/scss/block/_hero-section.scss
+++ b/scss/block/_hero-section.scss
@@ -1,13 +1,20 @@
 .hero-section{
     background-color: #014E56;
-    padding-bottom: 250px;
+    background-image: url("../images/Group\ 8.svg");
+    background-repeat: no-repeat;
+    background-size: 200px 200px;
+    background-position-x:calc(50% - 739px);
 }
 .hero {
     display: flex;
     gap: 100px;
+    padding-bottom: 250px;
+    background-image: url("../images/Group-icon.svg");
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 .hero__title-wrapper{
-    width: 620px;
+    max-width: 620px;
 }
 .hero__title {
     color: #FFF;
@@ -24,7 +31,7 @@
     line-height: 100px;
 }
 .hero__wrapper {
-    width: 445px;
+    max-width: 445px;
 }
 .hero__icon {
     display: inline-block;
@@ -46,15 +53,18 @@
         text-align: center;
     }
     .hero__title-wrapper{
-        width: 620px;
+        max-width: 620px;
     }
     .hero{
         display: flex;
         flex-direction: column;
         gap: 1px;
+        background-image: url("../images/Group-icon.svg");
+        background-repeat: no-repeat;
+        background-position: bottom center;
     }
     .hero__title-wrapper{
-        width: 395px;
+        max-width: 395px;
         margin: 0 auto;
     }
     .hero__title {
@@ -66,11 +76,33 @@
         line-height: 56px;
     }
     .hero__wrapper {
-        width: 565px;
+        max-width: 565px;
         margin: 0 auto;
         margin-top: 24px;
     }
     .hero__icon{
         display: none;
+    }
+}
+@media (max-width:580px){
+    .hero{
+        background-image: url("../images/Group-icon.svg");
+        background-repeat: no-repeat;
+        background-position: bottom center;
+        background-size: 100% auto;
+    }
+    .hero__title-wrapper{
+        max-width: 240px;
+    }
+    .hero__title {
+        font-size: 40px;
+        line-height: 40px;
+    }
+    .hero__strong{
+        font-size: 40px;
+        line-height: 40px;
+    }
+    .hero__wrapper {
+        margin-top: 18px;
     }
 }
